compiler/tests/fa/errors/pure_fnval.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع اعمال(ج : تابع (صحیح) صحیح, مقدار : صحیح) : صحیح:
    بازگشت ج(مقدار)
پایان

تابع اصلی:
    چ := (مقدار : صحیح) => مقدار + 1
    چاپ(اعمال(چ, 4))
پایان
